# demandradar

./: .env.example  .gitignore  ASSUMPTIONS.md  DECISIONS.md  Dockerfile  PLAN.md  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: categories.yaml  scoring.yaml  sources.yaml  watchlist.yaml
docs/: API_CHECKLIST.md  ONBOARDING_ACCESS.md  PLAYBOOK.docx  PLAYBOOK.md
scripts/: build_playbook_docx.py  ci.ps1
src/demandradar/: __init__.py  __main__.py  config.py
src/demandradar/classify/: classifier.py
src/demandradar/connectors/: __init__.py  _html.py  base.py
src/demandradar/connectors/data_egov/: connector.py
src/demandradar/connectors/data_egov/fixtures/: gbd_ul_page1.json
src/demandradar/connectors/ecc/: connector.py
src/demandradar/connectors/ecc/fixtures/: fms_searchanno_page1.html  med_searchanno_page1.html
src/demandradar/connectors/goszakup/: client.py  connector.py
src/demandradar/connectors/goszakup/fixtures/: trd_buy_page1.json
src/demandradar/connectors/hh/: connector.py
src/demandradar/connectors/hh/fixtures/: vacancies_watchlist.json
src/demandradar/connectors/mitwork/: connector.py
src/demandradar/connectors/mitwork/fixtures/: buys_page1.html
src/demandradar/connectors/mpkz/: connector.py
src/demandradar/connectors/mpkz/fixtures/: tenders_page1.html
src/demandradar/connectors/news_rss/: connector.py
src/demandradar/connectors/news_rss/fixtures/: kapital_feed.xml
src/demandradar/connectors/wordstat/: connector.py
src/demandradar/connectors/wordstat/fixtures/: dynamics_page1.json
src/demandradar/core/: daemon.py  models.py  pipeline.py
src/demandradar/dashboard/: app.py
src/demandradar/dashboard/templates/: base.html  connectors.html  index.html  referrals.html  report.html  signals.html  watchlist.html
src/demandradar/enrich/: base.py  enricher.py  providers.py
src/demandradar/enrich/fixtures/: companies.json
src/demandradar/llm/: base.py  claude_code.py  factory.py  ollama.py
src/demandradar/net/: http.py  proxy.py
src/demandradar/notify/: digest.py  outreach.py  telegram.py
src/demandradar/realestate/: module.py
src/demandradar/scoring/: scorer.py
src/demandradar/storage/: db.py  repo.py
src/demandradar/watchlist/: engine.py
tests/: test_classifier.py  test_connector_base.py  test_daemon.py  test_dashboard.py  test_enrich.py  test_goszakup.py  test_leading_connectors.py  test_llm.py  test_models.py  test_net.py  test_pipeline.py  test_playbook_sync.py  test_scoring.py  test_scrape_connectors.py  test_stage6.py  test_storage.py
tests/fixtures/: krisha_listing.html
