[project]
name = "demandradar"
version = "0.1.0"
description = "Мультиисточниковый агрегатор сигналов спроса (КЗ/СНГ): тендеры, латентный и опережающий спрос"
requires-python = ">=3.11"
license = { text = "Proprietary" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
