[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "demandradar"
version = "0.1.0"
description = "Мультиисточниковый агрегатор сигналов спроса (КЗ/СНГ): тендеры, латентный и опережающий спрос"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"demandradar.connectors.goszakup" = ["fixtures/*.json"]
"demandradar.connectors.mitwork" = ["fixtures/*.html"]
"demandradar.connectors.ecc" = ["fixtures/*.html"]
"demandradar.connectors.mpkz" = ["fixtures/*.html"]
"demandradar.enrich" = ["fixtures/*.json"]
"demandradar.dashboard" = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Depends()/Form() в дефолтах аргументов — каноничная идиома FastAPI
"src/demandradar/dashboard/app.py" = ["B008"]
